# Ellie

./: .dockerignore  .env.example  .gitignore  .prettierignore  CI_CD_STATUS.md  CI_CD_TEST_REPORT.md  CI_CD_TEST_SUMMARY.md  COMPONENT_API.md  CONTRIBUTING.md  DEVELOPMENT_TASKS.md  Dockerfile  INTEGRATION_TEST_REPORT.md  LICENSE  MARKETING_SITE_DOCUMENTATION.md  QUICK_REFERENCE.md  QUICK_TEST_GUIDE.md  README.md  RELEASES.md  SETUP.md  TASK_8_COMPLETION_SUMMARY.md  THEME_SYSTEM.md  docker-compose.prod.yml  docker-compose.yml  docker-deployment-test.ps1  package-lock.json  package.json  todo.md  verify-docker-config.ps1
.github/: PULL_REQUEST_TEMPLATE.md  README.md  auto-assign.yml
.kiro/: .gitkeep
backend/: .env.example  .env.production  .env.test  .eslintrc.js  .gitkeep  Dockerfile  MONITORING_TESTS_README.md  MONITORING_TEST_REPORT.md  README.md  jest.config.js  package-lock.json  package.json  test-results.txt
backend-fastapi/: docker-compose.yml  requirements.txt
client/: index.html
config/: .gitkeep
data/: .gitkeep
docker/: .gitkeep  README.md  docker-compose.yml  docker-deployment-test.ps1  nginx-production.conf  nginx.conf  server-common.conf  ssl-setup.ps1  ssl-setup.sh  ssl-verification-test.ps1  verify-docker-config.ps1
docs/: .gitkeep  BACKEND_CONSOLIDATION_SUMMARY.md  CI_CD_PIPELINE.md  COMPLETE_PROJECT_STRUCTURE_AUDIT.md  DEPLOYMENT.md  DOCUMENTATION_CLEANUP_SUMMARY.md  FINAL_CLEANUP_SUMMARY.md  FRONTEND_ARCHITECTURAL_REVIEW.md  FRONTEND_CLEANUP_COMPLETE.md  PRODUCTION_READINESS.md  README.md  README_CONSISTENCY_IMPLEMENTATION.md  README_STANDARDS.md  ROOT_CLEANUP_PLAN.md  ROOT_CLEANUP_SUMMARY.md  ROOT_DIRECTORY_CLEANUP.md  ROOT_DIRECTORY_CLEANUP_COMPLETE.md  SCRIPTS_FOLDER_AUDIT.md  SSL_SETUP_GUIDE.md  (+4 more)
docs/migration/backend-fastapi-reference/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/migration/backend-fastapi-reference/app/: __init__.py
docs/migration/backend-fastapi-reference/app/api/v1/: legal.py
docs/migration/backend-fastapi-reference/app/core/: exceptions.py  logging.py  security.py
docs/migration/backend-fastapi-reference/app/services/: cache_service.py  circuit_breaker.py  health_check.py  service_discovery.py  websocket_manager.py
docs/migration/backend-fastapi-reference/scripts/: start.sh  test.sh
(+386 files in other folders)
