[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ellie-voice-receptionist-fastapi"
version = "1.0.0"
description = "FastAPI Backend for Ellie Voice Receptionist AI Assistant"
authors = [
    {name = "Alex Cinovoj, TechTide AI", email = "alex@techtideai.io"},
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.2",
    "websockets>=12.0",
    "python-socketio>=5.10.0",
    "python-multipart>=0.0.6",
    "openai>=1.3.7",
    "groq>=0.4.1",
    "redis>=5.0.1",
    "aioredis>=2.0.1",
    "prometheus-client>=0.19.0",
    "structlog>=23.2.0",
    "slowapi>=0.1.9",
    "circuitbreaker>=1.4.0",
    "tenacity>=8.2.3",
    "python-dotenv>=1.0.0",
    "orjson>=3.9.10",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
keywords = ["ai", "voice", "legal", "assistant", "receptionist", "fastapi"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.12.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
    "pre-commit>=3.6.0",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]